llvm-gcc-4.2-2.9/gcc/testsuite/obj-c++.dg/syntax-error-3.mm
/* APPLE LOCAL file 4093475 */
/* Yet another stray infinite loop... */
/* { dg-do compile } */

@interface Foo
{
  int x;
  int y;
}
- (int) foo ; { /* { dg-error "stray .\{. between Objective\\-C\\+\\+ methods" } */
@end
